# EnergyPlus-Agent-dev

./: .env.example  .gitattributes  .gitignore  .mcp.json  README.md  geometry.idf  main.py  pyproject.toml  testdata_prompt.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
AI_agent/: CLAUDE.md  architecture.md  downstream_agent_changes.md  energyplus_mcp_migration_audit_2026-05-11.md  floorplan_redraw_strategy.md  idfpy_embed.md  new_case_guide.md  new_case_guide_twostep.md  open_model_guide.md  pivot_criteria.md  plan.md  token_optimization.md  twostep_architecture_diagram.md
AI_agent/architecture/: architecture.md  geometry_first_zonification.md  pipeline_0-5_capability_upgrade_suggestions.md  pipeline_stage_contracts.md  (+2 more)
Tool_scripts/: baseline_record.py  deepseek_review.py  export_idf.py  idfpy_roundtrip_sm15.py  preprocess_images.py  render_corrected_geometry.py  render_vector_to_png.py  render_vector_to_svg.py  run_phase2_deepseek.py  run_pipeline_deepseek.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
scripts/: _share.py  export_trace.py  run_demo.py  run_full_pipeline.py
src/: converter_manager.py
test_data/: EnergyPlus_Agent_Prompt.md  claude_ep.md
tests/: test_correction_stability.py  test_deterministic_core.py  test_geometry_kernel.py  test_intake_pipeline.py  test_intake_twostep.py  test_intakeoutput_assembly.py  test_interzone.py  test_llm_config.py  test_mcp_stdio.py  test_merge.py  test_phase2_kernel_wiring.py  test_pipeline_kernel_wiring.py  test_schedule_completeness.py  test_zone_agent.py
(+420 files in other folders)
