[project]
name = "energyplus-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "eppy>=0.5.63",
    "fastmcp>=2.14.1",
    "google-genai>=1.68.0",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.17.1",
    "scipy>=1.16.2",
    "tqdm>=4.67.3",
    "trimesh>=4.9.0",
    "typer>=0.20.1",
]

[project.scripts]
energyplus-mcp = "src.mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
    "N",
]

ignore = [
    "E501", # Line too long
    "N805",
    "N806"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "langsmith>=0.7.23",
    "pytest>=9.0.2",
]
